# eigenfem

./: .gitignore  CMakeLists.txt  README.md
data/: bar.mesh  bar.msh  plate.mesh  plate_fine.mesh  simple_cube.mesh
examples/: example_frequency_coarse.cpp  example_frequency_fine.cpp  example_input.txt  example_input_frequency.input  example_input_frequency_coarse.input  example_input_frequency_fine.input  example_input_modal.input  example_input_statics.input  example_input_statics_nodal.input  example_input_test.input  example_modal.cpp  example_statics.cpp  example_statics_nodal.cpp  sample_input.txt  sample_input_clean.txt
examples/data/: plate.mesh  plate_nodal.mesh
examples/results/: README.md
examples/results/example_eigenfem/: README.md
examples/results/example_frequency_coarse/: README.md
examples/results/example_frequency_fine/: README.md
examples/results/example_modal/: README.md
examples/results/example_statics/: README.md
examples/results/example_statics_nodal/: README.md
src/eigenfem/: element.cpp  element.h  io.cpp  io.h  main.cpp  main_test.cpp  materials.cpp  materials.h  mesh.cpp  mesh.h  model.cpp  model.h  solvers.cpp  solvers.h  utils.cpp  utils.h
tmp_examples/: example_frequency.cpp  example_modal.cpp  example_statics.cpp  modal.cpp  statics.cpp
